--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^6.26.1",
     "redux": "^5.0.1",
     "styled-components": "^6.1.13",
+    "vercel": "^37.4.0",
     "yarn": "^1.22.22"
   },
   "devDependencies": {
